Rework the FileUtils methods to return an input stream instead of the content string